WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
6658
World leak when closing inspected window
https://bugs.webkit.org/show_bug.cgi?id=6658
Summary
World leak when closing inspected window
Geoffrey Garen
Reported
2006-01-18 16:06:32 PST
To Repro: 0. Turn on "Always check for world leaks" in Debug menu 1. Navigate to www.google.com 2. Open Web Inspector 3. Close Safari window --> many things reported leaked
Attachments
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2006-01-23 11:56:00 PST
These are false positive reports. We need to improve our world leak checks to know about the inspector and not complain. This is also in radar: <
rdar://problem/4411863
>
Timothy Hatcher
Comment 2
2007-04-23 02:07:20 PDT
These were real leaks after all. Fixed in
r21028
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug